# ======================================
# File:     setup.cfg
# Author:   Jackie PENG
# Contact:  jackie.pengzhao@gmail.com
# Created:  2023-01-29
# Desc:
#   QTEASY setup build system
#   configuration file compatible
#   with setuptools >=40.8.0 <61.0.0
# ======================================

[metadata]
name = qteasy
version = 0.0.1.dev6
author = Jackie PENG
author_email = jackie.pengzhao@gmail.com
description = A fast quantitative investment tool kit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shepherdpp/qteasy
keywords = quantitative investment, quant
license = CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
packages = qteasy
;package_dir =
;    = qteasy
python_requires = >=3.6
install_requires =
    pandas>=0.25, <1.0.0
    numpy>=1.18.1
    numba>=0.47
    ta-lib==0.4.18
    tushare>=1.2.89
    mplfinance>=0.11

[options.extras_require]
database =
    pymysql >= 1.0.0
    sqlalchemy >= 1.4.18, <= 1.4.23
hdf = pytables >= 3.6.1
feather = pyarrow >= 3

[options.packages.find]
where = qteasy