# ======================================
# File:     setup.cfg
# Author:   Jackie PENG
# Contact:  jackie.pengzhao@gmail.com
# Created:  2023-01-29
# Desc:
#   QTEASY setup build system
#   configuration file compatible
#   with setuptools >=40.8.0 <61.0.0
# ======================================

[metadata]
name = qteasy
version = 1.1.10
author = Jackie PENG
author_email = jackie.pengzhao@gmail.com
maintainer = Jackie PENG
description = A fast quantitative investment tool kit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shepherdpp/qteasy
keywords = quantitative investment, quant
license = BSD License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Documentation :: Sphinx
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
packages = qteasy

python_requires = >=3.6
install_requires =
    pandas>=1.4.0
    numpy>=1.18.1
    numba>=0.47.0
    tushare>=1.2.89
    mplfinance
    rich>=10.0.0

[options.extras_require]
talib = ta-lib
database = pymysql >= 1.0.0
feather = pyarrow >= 3

[options.packages.find]
where = qteasy
